--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,9 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.cardview:cardview:1.0.0'
     def retrofitVersion = "2.5.0";
+    def supportVersion = "28.0.0"
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -36,6 +38,13 @@ dependencies {
     //lifecycle dependencies
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
+
+    //CardView dependency
+    implementation "com.android.support:cardview-v7:$supportVersion"
+
+    //Recyclerview dependencies
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+
 
 
 }
