--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,9 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     def retrofitVersion = "2.5.0";
     def supportVersion = "28.0.0"
+    def glideVersion = "4.11.0"
+
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -44,6 +47,10 @@ dependencies {
 
     //Recyclerview dependencies
     implementation "androidx.recyclerview:recyclerview:1.1.0"
+
+    //Glide
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
 
 
 
