--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,12 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
 
+    //CoordinatorLayout
+    implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
+
+    //Design support library
+    implementation "com.android.support:design:28.0.0"
+
 
 
 }
